language/move-lang/tests/move_check/expansion/restricted_address_names.exp
error[E02009]: invalid name
  ┌─ tests/move_check/expansion/restricted_address_names.move:1:9
  │
1 │ address Self;
  │         ^^^^ Invalid address name 'Self'. 'Self' is restricted and cannot be used to name a address

